# investment-lens

./: .gitignore  README.md  docker-compose.yaml
backend/: .gitignore  pyproject.toml  start.sh
backend/src/app/migration/alembic/: env.py
backend/src/app/migration/alembic/versions/: 320b956e66ef_add_users_table.py  333413784d96_add_transaction_orm.py  5e077ee666b0_add_property_and_private_ownership_table.py  5fdcba90f616_add_fx_table.py  6211461fb14a_add_description_to_property.py  85dff55dfb95_add_user_id.py  9309e58f226a_add_account_and_leg.py  a4a9a836db29_add_email_to_user.py  c67534194872_add_cash_prop_flag.py  ca933ca9e956_make_prop_id_unique_in_ownership_table.py  e3f00fd12fe0_add_full_text_index.py  f1077dbbe2d5_add_custom_props_to_property.py
backend/src/app/model/: enums.py  exceptions.py  market.py  registry.py  transaction.py  user.py
backend/src/app/repository/: cache.py  market.py  orm.py  registry.py  transaction.py  user.py
backend/src/app/service/: auth.py  email.py  market.py  registry.py  transaction.py  user.py
backend/src/app/service/templates/: base.html  reset_email.html  test.html
backend/src/app/service/templates/components/: footer.html  header.html
backend/src/app/utils/: base.py  cache.py  rate_limiter.py  secrets.py  tools.py
backend/src/web/: main.py
backend/src/web/api/v1/: api.py
backend/src/web/api/v1/endpoints/: management.py  market.py  registry.py  transaction.py
backend/src/web/dependency/: auth.py  repository.py  service.py
backend/test/: test_user.py  test_yfinance.py
frontend/: index.html  package.json  (+2 more)
(+40 files in other folders)
