[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiobotocore==2.17",
    "aiomysql>=0.3.2",
    "alembic==1.16.4",
    "anytree==2.12.1",
    "babel==2.13.0",
    "bcrypt>=4.3.0,<5.0.0",
    "borb==2.1.18",
    "botocore==1.35.93",
    "currencyconverter==0.17.11",
    "dacite==1.8.1",
    "fastapi==0.115.11",
    "httpx==0.28.1",
    "hvac==2.3.0",
    "jinja2==3.1.4",
    "mysql-connector-python==8.1.0",
    "passlib==1.7.4",
    "phonenumbers==8.13.22",
    "pluggy>=1.6.0",
    "pydantic==2.10.6",
    "pytest==8.3.3",
    "python-jose==3.5.0",
    "python-multipart==0.0.6",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "s3fs==2025.2.0",
    "sqlalchemy==2.0.36",
    "sqlalchemy-utils==0.41.2",
    "sqlmodel==0.0.24",
    "starlette==0.46.1",
    "tomli==2.2.1",
    "typer-di==0.1.3",
    "uvicorn==0.34.0",
]
